main_output.txt
  File "main.py", line 11
    <!DOCTYPE html>
    ^
SyntaxError: invalid syntax


** Process exited - Return Code: 1 **
Press Enter to exit terminal